test/files/neg/t631.check
t631.scala:1: error: `implicit` modifier cannot be used for top-level objects
implicit object Test {
                ^
1 error
